* fix #296 - on n'affiche pas tout pour ne pas inquieter inutilement - champs : time / IP / ACTION - les 20 dernieres uniquement - derniere action visible en base de myboat (? utile ?)

--- a/trunk/site/style/base-style.css
+++ b/trunk/site/style/base-style.css
@@ -104,6 +104,14 @@ body
   margin-right: 1px;
 }
 
+#user_action
+{ 
+  width: 100%;
+  margin-left:  1px;
+  margin-right: 1px;
+  text-align: center;
+}
+
 #infobulle
 {
   position: absolute; 
